# PantallaRelojDespertador

./: .gitignore  Pantalla.FCStd  package.json
src/: App.svelte  Calendar.svelte  Clock.svelte  Config.svelte  Lista.svelte  Main.svelte  styles.css
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
utils/: server.py
v1/: bun.lockb  index.html  prepare_docker.sh  readme.md  rundocker.sh
v2/: Cargo.toml  ejemplo.py  package-lock.json  package.json  run.sh
v2/src/: App.svelte  Calendar.svelte  Lista.svelte  Main.svelte  main.rs  styles.css  utils.js
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/src/: main.rs
v2/utils/: get_spotify_tokem.py
v2/v1/: Dockerfile
v2/v1/src/: App.svelte  Clock.svelte  Lista.svelte
v2/v1/src-tauri/: Cargo.toml
v2/v1/utils/: server.py
